*Empty MediaWiki Message*

--- a/Atlantine_valdmeri.mw
+++ b/Atlantine_valdmeri.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:Atlantic Ocean.png|right|300px]]
-'''Atlantine valdmeri''' om valdmeri [[Ma]]n.
+'''Atlantine valdmeri''' om valdmeri [[Ma]]s.
 
 {{stub}}
 
