*Empty MediaWiki Message*

--- a/Evrovizii-2012.mw
+++ b/Evrovizii-2012.mw
@@ -1,7 +1,7 @@
 [[Fail:Wiki Eurovision Heart (Infobox).svg|right|200px|Konkursan logotip]]
 '''Evrovizii-2012''' ([[Anglijan kel'|angl.]] ''Eurovision Song Contest 2012'', [[Francijan kel'|fr.]] ''Concours Eurovision de la chanson 2012'', [[Azerbaidžanan kel'|azer.]] ''2012 Avroviziya Mahnı Müsabiqəsi'', [[Venäkel'|ven.]] ''Конкурс песни Евровидение 2012'') oli 57-nz' [[Evrovizii]]-konkurs, kudamb oli oigetud [[Baku]]s, [[Azerbaidžan]]an pälidnas, 2012 vodel.
 
-Konkursan vägestai oli [[Ročinma|ročine]] pajatai '''[[Lorin]]'''.
+Konkursan vägestai oli [[Ročinma|ročilaine]] pajatai '''[[Lorin]]'''.
 
 == Valdkundad-ühtnijad ==
 [[Fail:ESC 2012 Map.svg|center|thumb|400px|legend|#782167|
@@ -224,7 +224,7 @@ Konkursan vägestai oli [[Ročinma|ročine]] pajatai '''[[Lorin]]'''.
 | [[Anglijan kel'|Anglijan]]
 | Jedward
 | «Waterline»
-| «Vezilinii»
+| «Vedelinii»
 |46
 |19
 |-bgcolor = "#ED9121"
