/* Administraciž-territorine jagand */

--- a/Avstrii.mw
+++ b/Avstrii.mw
@@ -26,8 +26,8 @@ Eläjiden lugu — 8,2 mil.</br>
 Pind — 83 871 km².</br>
 Ohjastandform — [[Parlamentine tazovaldkund|Parlamentine]] [[tazovaldkund]].
 
-== Administraciž-territorine jagand ==
-Avstrii om fediracii. Avstrijas om 9 fediraciimad:
+== Administrativiž-territorine jagand ==
+Avstrii om fediracii. Avstrijas om 9 fediracijanmad:
 * [[Burgenland]] 
 * [[Karentii]] 
 * [[Alaavstrii]] 
