*Empty MediaWiki Message*

--- a/Noibert_German.mw
+++ b/Noibert_German.mw
@@ -1,6 +1,6 @@
 '''German Noibert''' ([[saksan kel'|saks.]]: ''Hermann Neubert''; sünd. [[23. viluku]] [[1935]], [[Mangeim]], [[Saksanma]] — kol. [[11. eloku]] [[2003]], [[Bül' (Baden)|Bül']], Saksanma) oli saksalaine jurist da [[mikologii|mikolog]].
 
-Radoi [[miksomicetad|miksomicetoiden]] ümbrikirjutandan päl. [[Nomenkulaturinicialad]] — „<span class="Person">H.Neubert</span>“. Avaiti kuverz'-se sugud ''[[Cribraria]]'' i ''[[Lamproderma]]''-heimkundoiš.
+Radoi [[miksomicetad|miksomicetoiden]] ümbrikirjutandan päl. [[Nomenkulaturinicialad]] — „<span class="Person">H.Neubert</span>“. Avaiži kuverz'-se sugud ''[[Cribraria]]'' i ''[[Lamproderma]]''-heimkundoiš.
 {{stub}}
 
 [[Kategorii:Mikologad]]
