--- a/Emanuel'_Devid_(model'jer).mw
+++ b/Emanuel'_Devid_(model'jer).mw
@@ -1,5 +1,5 @@
 {{tärtused|Emanuel' Devid}}
-'''Devid Emanuel'''' ([[anglijan kel'|angl.]]: ''David Emanuel''; sünd. [[17. kül'mku]] [[1952]], [[Bridžent (Uel's)|Bridžent]], [[Uel's]], [[Sur' Britanii]]) om britanijalaine (uel'salaine) model'jer. Tetab kut '''[[Dianan Spensepan saiplat'kö|saiplat'kön]]''' tegii [[Princess Diana|Princessan Dianale]].
+'''Devid Emanuel'''' ([[anglijan kel'|angl.]]: ''David Emanuel''; sünd. [[17. kül'mku]] [[1952]], [[Bridžent (Uel's)|Bridžent]], [[Uel's]], [[Sur' Britanii]]) om britanijalaine (uel'salaine) model'jer. Tetab kut '''[[Dianan Spensepan saiplat'kö|saiplat'kön]]''' tegii [[Princess Diana|Princessale Dianale]].
 
 == Kollekcijad ==
 * ''Style for All Seasons'' (1983)
