/* Administrativiž-territorine jagand */

--- a/Avstrii.mw
+++ b/Avstrii.mw
@@ -27,7 +27,7 @@ Pind — 83 871 km².</br>
 Ohjastandform — [[Parlamentine tazovaldkund|Parlamentine]] [[tazovaldkund]].
 
 == Administrativiž-territorine jagand ==
-Avstrii om fediracii. Avstrijas om 9 fediracijanmad:
+Avstrii om federacii. Avstrijas om 9 federacijanmad:
 * [[Burgenland]] 
 * [[Karentii]] 
 * [[Alaavstrii]] 
