*Empty MediaWiki Message*

--- a/Diamant.mw
+++ b/Diamant.mw
@@ -3,7 +3,7 @@
 [[Fail:Radiant cut diamond.jpg|thumb|right|250px|Ümbriratud almaz]]
 '''Almaz''' om [[mineral]], [[hil'nik]]an kubine [[allotropine form]].
 
-Se om [[metastabiline olend|metastabiline]] mineral, i sikš voib olda olmas agjatomašti hätkele [[normaližed arvoimižed|normaližiš arvoimižiš]]. [[Vakuum]]as vai [[inertižed gazad|inertižiš gazoiš]] (korgedan lämusel) hilläšti linneb [[grafit]]aks.
+Se om [[metastabiline olend|metastabiline]] mineral, i sikš voib olda olmas agjatomašti hätkele [[normaližed arvoimižed|normaližiš arvoimižiš]]. [[Vakuum]]as vai [[inertižed gazad|inertižiš gazoiš]] (korgedal lämusel) linneb hilläšti [[grafit]]aks.
 {{stub}}
 
 [[Kategorii:Almaz|*]]
