*Empty MediaWiki Message*

--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -49,7 +49,7 @@ Suomenman oficialižed keled oma [[suomen kel'|suomen]] da [[ročin kel'|ročin]
 == Ižanduz ==
 
 == Provincijad ==
-[[Fail:Suomen maakunnat.svg|right|300px]]
+[[Fail:Provinces in Finland.svg|right|300 px]]
 {| 
 ! <small>Provincii
 ! <small>Pälidn
