*Empty MediaWiki Message*

--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -1,4 +1,5 @@
-[[Fail:FED night1.jpg|thumb|right|250px|Moskv-siti]]
+[[File:MIBC_11th_May,_2013.jpg|thumb|400px]]
+[[File:Москва-Сити ночью.jpg|thumb|400px]]
 '''Moskv-siti''' ([[venäkel'|ven.]]: ''Москва-Сити'') om biznesrajon [[Moskv]]as.
 {{stub}}
 
