*Empty MediaWiki Message*

--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -1,6 +1,6 @@
-[[File:MIBC_11th_May,_2013.jpg|thumb|400px]]
-[[File:Москва-Сити ночью.jpg|thumb|400px]]
-'''Moskv-siti''' ([[venäkel'|ven.]]: ''Москва-Сити'') om biznesrajon [[Moskv]]as.
+[[File:MIBC 11th May, 2013.jpg|thumb|right|300px|Moskv-Siti]]
+[[File:Москва-Сити ночью.jpg|thumb|right|300px|Moskv-Siti öl]]
+'''Moskv-Siti''' ([[venäkel'|ven.]]: ''Москва-Сити'') om biznesrajon [[Moskv]]as.
 {{stub}}
 
 [[Kategorii:Moskv]]
