--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -1,6 +1,8 @@
 [[File:MIBC 11th May, 2013.jpg|thumb|right|300px|Moskv-Siti]]
 [[File:Москва-Сити ночью.jpg|thumb|right|300px|Moskv-Siti öl]]
-'''Moskv-Siti''' ([[venäkel'|ven.]]: ''Москва-Сити'') om biznesrajon [[Moskv]]as.
+'''Moskv-Siti''' ([[venäkel'|ven.]]: ''Москва-Сити'') om biznesrajon [[Moskv]]as [[Presnin randird]]al. Se linneb azjaližen aktivižusen zonaks; nügüd' om sauvomižen stadijas. Saudud vlspäi [[1995]] vhesai [[2017]].
+
+Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 {{stub}}
 
 [[Kategorii:Moskv]]
