*Empty MediaWiki Message*

--- a/Tavi.mw
+++ b/Tavi.mw
@@ -1,5 +1,5 @@
 [[Fail:Teal (Anas crecca) (7).jpg|thumb|right|300px|Tavi]]
-'''Tavi''' ([[latinan kel'|lat.]] ''Anas crecca'') om [[lind]].
+'''Tavi''' (dial. mugažo '''čiruškaine''') ([[latinan kel'|lat.]] ''Anas crecca'') om [[lind]].
 
 {{stub}}
 
