--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -1,8 +1,489 @@
 [[File:MIBC 11th May, 2013.jpg|thumb|right|300px|Moskv-Siti]]
 [[File:Москва-Сити ночью.jpg|thumb|right|300px|Moskv-Siti öl]]
-'''Moskv-Siti''' ([[venäkel'|ven.]]: ''Москва-Сити'') om biznesrajon [[Moskv]]as [[Presnin randird]]al. Se linneb azjaližen aktivižusen zonaks; nügüd' om sauvomižen stadijas. Saudud vlspäi [[1995]] vhesai [[2017]].
+'''Moskv-Siti''' ([[venäkel'|ven.]]: ''Москва-Сити'') om biznesrajon [[Moskv]]as, [[Presnin randird]]al. Se linneb azjaližen aktivižusen zonaks; nügüd' om sauvomižen stadijas. Saudud vlspäi [[1995]] vhesai [[2017]].
 
 Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
+
+== Objektad ==
+[[Fail:Moskva city.svg|thumb|left|500px|Moskv-Sitin plan]]
+{| class="table sortable" style="width:100%;"
+|-
+|bgcolor="bbffbb" width="90px" | Tehtud (saudud)
+|bgcolor="ddffdd" width="90px" | Projektan korktuz
+|bgcolor="ffffbb" width="90px" | Saudese
+|bgcolor="ffbbbb" width="90px" | „Kül'menzoittud“
+|bgcolor="C8C8C8" width="90px" | Tühjitud
+|bgcolor="EEEEEE" width="90px" | Ezimeletaden
+|}
+
+=== Tarhoiden tablut ===
+{| class="table sortable" style="width:100%;"
+|- style="text-align:center; white-space:nowrap;" bgcolor="BBBBBB"
+! №
+! Nimi
+! Sauvomižen augotiž
+! Sauvomižen lop
+! Arend
+! Pind
+! Homaičendad
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 0
+| style="text-align:center;" | [[Башня 2000]] и [[Мост Багратион]]
+| style="text-align:right;"  | 1996
+| style="text-align:right;"  | 2001
+| style="text-align:right;"  | 1
+| style="text-align:right;"  | 61 057
+| style="text-align:left;"   | Первое построенное здание в [[ММДЦ]]
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 1
+| style="text-align:center;" | [[Экспоцентр (Москва)|Экспоцентр]]
+| style="text-align:right;"  | 1977<ref>Появление первого павильона</ref>
+| style="text-align:right;"  | 2008<ref>Появление восьмого павильона</ref>
+| style="text-align:right;"  | 8
+| style="text-align:right;"  | 165 000
+| style="text-align:left;"   | Первые корпуса существовали ещё до [[ММДЦ]]
+|- bgcolor="ffffbb"
+| style="text-align:center;" | 2-3
+| style="text-align:center;" | [[Башня Эволюция]] и общественная площадь
+| style="text-align:right;"  | 2011
+| style="text-align:right;"  | 2014
+| style="text-align:right;"  | 1
+| style="text-align:right;"  | 169 000
+| style="text-align:left;"   |
+|- bgcolor="ffffbb"
+| style="text-align:center;" | 4
+| style="text-align:center;" | [[Комплекс «Imperia Tower»|Imperia Tower]]
+| style="text-align:right;"  | 2006
+| style="text-align:right;"  | 201x<ref>Башня сдана в 2011 году</ref>
+| style="text-align:right;"  | 2
+| style="text-align:right;"  | 287 723
+| style="text-align:left;"   | Проектирование второй очереди комплекса
+|- bgcolor="ffffbb"
+| style="text-align:center;" | 6-8
+| style="text-align:center;" | [[Центральное ядро Москва-Сити|Центральное ядро]]
+| style="text-align:right;"  | 2005
+| style="text-align:right;"  | 2014
+| style="text-align:right;"  | 1
+| style="text-align:right;"  | 450 000
+| style="text-align:left;"   | Отделка снаружи не завершена
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 9
+| style="text-align:center;" | [[Город Столиц]]
+| style="text-align:right;"  | 2005
+| style="text-align:right;"  | 2009
+| style="text-align:right;"  | 3
+| style="text-align:right;"  | 288 680
+| style="text-align:left;"   | Первое сверхвысокое здание в [[Европа|Европе]]
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 10
+| style="text-align:center;" | [[Башня на набережной]]
+| style="text-align:right;"  | 2003
+| style="text-align:right;"  | 2007
+| style="text-align:right;"  | 3
+| style="text-align:right;"  | 254 000
+| style="text-align:left;"   |
+|- align="right" bgcolor="ffffbb"
+| style="text-align:center;" | 11
+| style="text-align:center;" | [[IQ-quarter (Москва-Сити)|IQ-quarter]]
+| style="text-align:right;"  | 2012
+| style="text-align:right;"  | 2015
+| style="text-align:right;"  | 3
+| style="text-align:right;"  | 228 000
+| style="text-align:left;"   |
+|- align="right" bgcolor="ddffdd"
+| style="text-align:center;" | 12
+| style="text-align:center;" | [[Евразия (здание ММДЦ)|Башня «Евразия»]]
+| style="text-align:right;"  | 2007
+| style="text-align:right;"  | 2013
+| style="text-align:right;"  | 1
+| style="text-align:right;"  | 207 542
+| style="text-align:left;"   | Ведётся остекление последних этажей башни
+|- align="right" bgcolor="ffffbb"
+| style="text-align:center;" | 13
+| style="text-align:center;" | [[Комплекс «Федерация»]]
+| style="text-align:right;"  | 2003
+| style="text-align:right;"  | 2014
+| style="text-align:right;"  | 3
+| style="text-align:right;"  | 423 000
+| style="text-align:left;"   | Будет самым высоким комплексом в [[ММДЦ]] и в [[Европа|Европе]]
+|- align="right" bgcolor="bbffbb"
+| style="text-align:center;" | 14
+| style="text-align:center;" | [[Меркурий Сити Тауэр]]
+| style="text-align:right;"  | 2009
+| style="text-align:right;"  | 2013
+| style="text-align:right;"  | 1
+| style="text-align:right;"  | 158 528
+| style="text-align:left;"   | Самое высокое здание в [[Европа|Европе]]
+|- align="right" bgcolor="EEEEEE"
+| style="text-align:center;" | 15
+| style="text-align:center;" | Гранд Сити Москва<ref>[http://realty.lenta.ru/news/2011/09/07/torgi/ Место мэрии в «Москва-Сити» займут гостиница и апартаменты — Realty.lenta.ru]</ref>
+| style="text-align:right;"  | 2013
+| style="text-align:right;"  | 2015
+| style="text-align:right;"  | 1
+| style="text-align:right;"  | 315 282
+| style="text-align:left;"   | Установлен кран на площадке
+|- align="right" bgcolor="ffffbb"
+| style="text-align:center;" | 16
+| style="text-align:center;" | [[Око (Москва-Сити)|ОКО]]
+| style="text-align:right;"  | 2011
+| style="text-align:right;"  | 2014
+| style="text-align:right;"  | 3
+| style="text-align:right;"  | 429 600
+| style="text-align:left;"   |
+|- align="right" bgcolor="EEEEEE"
+| style="text-align:center;" | 17-18
+| style="text-align:center;" | Многофункциональный административно-деловой комплекс<ref name="1718ibc">[http://www.skyscrapercity.com/showpost.php?p=96984319&postcount=1447 SkyscraperCity — View Single Post — 17-18: 17-18 МДЦ | разработка прое&#1 …<!-- Заголовок добавлен ботом -->]</ref>
+| style="text-align:right;"  | 2013
+| style="text-align:right;"  | 2015
+| style="text-align:right;"  | 2
+| style="text-align:right;"  | 362 000
+| style="text-align:left;"   | Идёт подготовка к строительству
+|- align="right" bgcolor="bbffbb"
+| style="text-align:center;" | 19
+| style="text-align:center;" | [[Северная башня]]
+| style="text-align:right;"  | 2005
+| style="text-align:right;"  | 2007
+| style="text-align:right;"  | 1
+| style="text-align:right;"  | 135 000
+| style="text-align:left;"   |
+|- align="right" bgcolor="EEEEEE"
+| style="text-align:center;" | 20
+| style="text-align:center;" |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- align="right" bgcolor="EEEEEE"
+| style="text-align:center;" | 21
+| style="text-align:center;" | Комплекс «Юрий Долгорукий»
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  | 2
+| style="text-align:right;"  | 249 073
+| style="text-align:right;"  |
+|- align="right" bgcolor="EEEEEE"
+| style="text-align:center;" | 22
+| style="text-align:center;" |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+|- align="right" bgcolor="EEEEEE"
+| style="text-align:center;" | 23
+| style="text-align:center;" |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+|- align="right" bgcolor="EEEEEE"
+| style="text-align:center;" | 24
+| style="text-align:center;" |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+|- align="right" bgcolor="EEEEEE"
+| style="text-align:center;" | 25
+| style="text-align:center;" |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+|- align="right" bgcolor="EEEEEE"
+| style="text-align:center;" | 29-30
+| style="text-align:center;" |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- align="right" bgcolor="EEEEEE"
+| style="text-align:center;" | 31
+| style="text-align:center;" |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+|}
+
+=== Neboskröboiden tablut ===
+{| class="table sortable" style="width:100%;"
+|- style="text-align:center; white-space:nowrap;" bgcolor="BBBBBB"
+! №
+! Nimi
+! Sauvomižen augotiž
+! Sauvomižen lop
+! Korktuz (katuz)
+! Korktuz (maksimaline)
+! Žirud
+! Pind
+! Homaičendad
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 0
+| style="text-align:center;" | Башня 2000
+| style="text-align:right;"  | 1996
+| style="text-align:right;"  | 2001
+| style="text-align:right;"  | 104
+| style="text-align:right;"  | 104
+| style="text-align:right;"  | 34
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- bgcolor="ffffbb"
+| style="text-align:center;" | 3
+| style="text-align:center;" | Эволюция
+| style="text-align:right;"  | 2011
+| style="text-align:right;"  | 2014
+| style="text-align:right;"  | 247
+| style="text-align:right;"  | 255
+| style="text-align:right;"  | 53
+| style="text-align:right;"  |
+| style="text-align:left;"   | Строится 51-й этаж (на 9 июня 2013)
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 4
+| style="text-align:center;" | Империя Тауэр
+| style="text-align:right;"  | 2006
+| style="text-align:right;"  | 2011
+| style="text-align:right;"  | 230
+| style="text-align:right;"  | 239
+| style="text-align:right;"  | 60
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- bgcolor="EEEEEE"
+| style="text-align:center;" | 4
+| style="text-align:center;" | Империя Тауэр: Ворота Сити
+| style="text-align:right;"  | 2013
+| style="text-align:right;"  | 201x
+| style="text-align:right;"  | 50
+| style="text-align:right;"  | 50
+| style="text-align:right;"  | 14
+| style="text-align:right;"  | 
+| style="text-align:left;"   | Строительство намечено на осень<ref>{{cite web|url=http://www.m24.ru/articles/17236|title=M24.RU - В "Москве-Сити" появится новое здание с пешеходной улицей - Сетевое издание М24 - Москва 24|accessdate=2013-05-01|archiveurl=http://www.webcitation.org/6GWPFuHR0|archivedate=2013-05-11}}</ref>
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 9
+| style="text-align:center;" | Город Столиц: Офисная пристройка
+| style="text-align:right;"  | 2005
+| style="text-align:right;"  | 2008
+| style="text-align:right;"  | 70
+| style="text-align:right;"  | 70
+| style="text-align:right;"  | 18
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 9
+| style="text-align:center;" | Город Столиц: Санкт-Петербург
+| style="text-align:right;"  | 2005
+| style="text-align:right;"  | 2009
+| style="text-align:right;"  | 255
+| style="text-align:right;"  | 255
+| style="text-align:right;"  | 65
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 9
+| style="text-align:center;" | Город Столиц: Москва
+| style="text-align:right;"  | 2005
+| style="text-align:right;"  | 2009
+| style="text-align:right;"  | 302
+| style="text-align:right;"  | 302
+| style="text-align:right;"  | 76
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 10
+| style="text-align:center;" | Башня на Набережной: A
+| style="text-align:right;"  | 2003
+| style="text-align:right;"  | 2004
+| style="text-align:right;"  | 80
+| style="text-align:right;"  | 80
+| style="text-align:right;"  | 17
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 10
+| style="text-align:center;" | Башня на Набережной: B
+| style="text-align:right;"  | 2004
+| style="text-align:right;"  | 2005
+| style="text-align:right;"  | 127
+| style="text-align:right;"  | 127
+| style="text-align:right;"  | 27
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 10
+| style="text-align:center;" | Башня на Набережной: C
+| style="text-align:right;"  | 2005
+| style="text-align:right;"  | 2007
+| style="text-align:right;"  | 268
+| style="text-align:right;"  | 268
+| style="text-align:right;"  | 59
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- bgcolor="ffffbb"
+| style="text-align:center;" | 11
+| style="text-align:center;" | IQ-quarter: Башня 1
+| style="text-align:right;"  | 2012
+| style="text-align:right;"  | 2015
+| style="text-align:right;"  | 80
+| style="text-align:right;"  | 80
+| style="text-align:right;"  | 21
+| style="text-align:right;"  |
+| style="text-align:left;"   | Строятся подземные этажи (на 4 июня 2013)
+|- bgcolor="ffffbb"
+| style="text-align:center;" | 11
+| style="text-align:center;" | IQ-quarter: Башня 2
+| style="text-align:right;"  | 2012
+| style="text-align:right;"  | 2015
+| style="text-align:right;"  | 135
+| style="text-align:right;"  | 135
+| style="text-align:right;"  | 33
+| style="text-align:right;"  |
+| style="text-align:left;"   | Строится 11-й этаж (на 4 июня 2013)
+|- bgcolor="ffffbb"
+| style="text-align:center;" | 11
+| style="text-align:center;" | IQ-quarter: Башня 3
+| style="text-align:right;"  | 2012
+| style="text-align:right;"  | 2015
+| style="text-align:right;"  | 169
+| style="text-align:right;"  | 169
+| style="text-align:right;"  | 42
+| style="text-align:right;"  |
+| style="text-align:left;"   | Строится 9-й этаж (на 4 июня 2013)
+|- bgcolor="ddffdd"
+| style="text-align:center;" | 12
+| style="text-align:center;" | Евразия
+| style="text-align:right;"  | 2007
+| style="text-align:right;"  | 2013
+| style="text-align:right;"  | 309
+| style="text-align:right;"  | 309
+| style="text-align:right;"  | 72
+| style="text-align:right;"  |
+| style="text-align:left;"   | Идёт остекление последних этажей башни (на 9 июня 2013)
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 13
+| style="text-align:center;" | Федерация: Запад
+| style="text-align:right;"  | 2003
+| style="text-align:right;"  | 2008
+| style="text-align:right;"  | 242
+| style="text-align:right;"  | 242
+| style="text-align:right;"  | 62
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- bgcolor="ffbbbb"
+| style="text-align:center;" | 13
+| style="text-align:center;" | Федерация: Восток
+| style="text-align:right;"  | 2004
+| style="text-align:right;"  | 2014
+| style="text-align:right;"  | 360
+| style="text-align:right;"  | 360
+| style="text-align:right;"  | 93
+| style="text-align:right;"  |
+| style="text-align:left;"   | Строительство приостановлено (на 9 июня 2013)<ref>{{cite web|url=http://www.skyscrapercity.com/showthread.php?t=457285&page=589postcount=11158|title=SkyscraperCity - View Single Post - 13: Комплекс Федерация &#124; 242м 6 …|accessdate=2013-06-04|archiveurl=http://www.webcitation.org/6F95L0TdH|archivedate=2013-06-04}}</ref>
+|- bgcolor="ffbbbb"
+| style="text-align:center;" | 13
+| style="text-align:center;" | Федерация: Шпиль
+| style="text-align:right;"  | 2004
+| style="text-align:right;"  | 2014
+| style="text-align:right;"  | 509
+| style="text-align:right;"  | 509
+| style="text-align:right;"  |
+| style="text-align:right;"  |
+| style="text-align:left;"   | Проект заморожен (на 9 июня 2013)
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 14
+| style="text-align:center;" | Меркурий Сити Тауэр
+| style="text-align:right;"  | 2009
+| style="text-align:right;"  | 2013
+| style="text-align:right;"  | 339
+| style="text-align:right;"  | 339
+| style="text-align:right;"  | 75
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|- bgcolor="ffffbb"
+| style="text-align:center;" | 16
+| style="text-align:center;" | ОКО: Южная башня
+| style="text-align:right;"  | 2011
+| style="text-align:right;"  | 2014
+| style="text-align:right;"  | 335
+| style="text-align:right;"  | 335
+| style="text-align:right;"  | 85
+| style="text-align:right;"  |
+| style="text-align:left;"   | Строится 44-й этаж (на 9 июня 2013)
+|- bgcolor="ffffbb"
+| style="text-align:center;" | 16
+| style="text-align:center;" | ОКО: Северная башня
+| style="text-align:right;"  | 2011
+| style="text-align:right;"  | 2014
+| style="text-align:right;"  | 195
+| style="text-align:right;"  | 195
+| style="text-align:right;"  | 44
+| style="text-align:right;"  |
+| style="text-align:left;"   | Строится 37-й этаж (на 9 июня 2013)
+|- bgcolor="ffffbb"
+| style="text-align:center;" | 16
+| style="text-align:center;" | ОКО: Паркинг
+| style="text-align:right;"  | 2012
+| style="text-align:right;"  | 2013
+| style="text-align:right;"  | 30
+| style="text-align:right;"  | 30
+| style="text-align:right;"  | 9
+| style="text-align:right;"  |
+| style="text-align:left;"   | Строятся подземные этажи (на 9 июня 2013)
+|- bgcolor="bbffbb"
+| style="text-align:center;" | 19
+| style="text-align:center;" | Северная башня
+| style="text-align:right;"  | 2005
+| style="text-align:right;"  | 2007
+| style="text-align:right;"  | 105
+| style="text-align:right;"  | 130
+| style="text-align:right;"  | 27
+| style="text-align:right;"  |
+| style="text-align:left;"   |
+|}
+
+=== Tühjitud projektad ===
+{| class="table sortable" style="width:100%;"
+|- style="text-align:center; white-space:nowrap;" bgcolor="BBBBBB"
+! №
+! Nimi
+! Korktuz
+! Žirud
+! Pind
+! Homaičendad
+|- bgcolor="C8C8C8"
+| style="text-align:center;" | 4
+| style="text-align:center;" | Аква-Сити Палас<ref>[http://www.world-art.ru/architecture/architecture.php?id=6720 Аква Сити Палас [Aqua City Palace&#93;<!-- Заголовок добавлен ботом -->]</ref>
+| style="text-align:left;"   |
+| style="text-align:left;"   | 36
+| style="text-align:left;"   |
+| style="text-align:left;"   | Заменён на комплекс «[[Imperia Tower]]»
+|- bgcolor="C8C8C8"
+| style="text-align:center;" | 15
+| style="text-align:center;" | Государственная Дума
+| style="text-align:left;"   | 308
+| style="text-align:left;"   | 72
+| style="text-align:left;"   | 622 000
+| style="text-align:left;"   | Заменён на комплекс «Гранд Сити Москва»
+|- bgcolor="C8C8C8"
+| style="text-align:center;" | 17-18
+| style="text-align:center;" | [[Башня Россия]]
+| style="text-align:left;"   | 612
+| style="text-align:left;"   | 118
+| style="text-align:left;"   | 520 000
+| style="text-align:left;"   | Отменено
+|- bgcolor="C8C8C8"
+| style="text-align:center;" | 20
+| style="text-align:center;" | [[Выставочно-деловой комплекс (Москва-Сити)|Выставочно-деловой комплекс]]
+| style="text-align:left;"   | 228
+| style="text-align:left;"   | 59
+| style="text-align:left;"   | 180 000
+|style="text-align:left;"    | Отменено
+|}
 {{stub}}
 
 [[Kategorii:Moskv]]
