*Empty MediaWiki Message*

--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -28,23 +28,23 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 ! Homaičendad
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 0
-| style="text-align:center;" | [[Башня 2000]] и [[Мост Багратион]]
+| style="text-align:center;" | [[Čuhunduz 2000]] da [[Bagration-sild]]
 | style="text-align:right;"  | 1996
 | style="text-align:right;"  | 2001
 | style="text-align:right;"  | 1
 | style="text-align:right;"  | 61 057
-| style="text-align:left;"   | Первое построенное здание в [[ММДЦ]]
+| style="text-align:left;"   | Ezmäine sauvuz Moskv-Sitiš
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 1
-| style="text-align:center;" | [[Экспоцентр (Москва)|Экспоцентр]]
-| style="text-align:right;"  | 1977<ref>Появление первого павильона</ref>
-| style="text-align:right;"  | 2008<ref>Появление восьмого павильона</ref>
+| style="text-align:center;" | [[Ekspocentr (Moskv)|Ekspocentr]]
+| style="text-align:right;"  | 1977
+| style="text-align:right;"  | 2008
 | style="text-align:right;"  | 8
 | style="text-align:right;"  | 165 000
-| style="text-align:left;"   | Первые корпуса существовали ещё до [[ММДЦ]]
+| style="text-align:left;"   | Ezmäižed korpusad oli olmas Moskv-Sitin olendhesai
 |- bgcolor="ffffbb"
-| style="text-align:center;" | 2-3
-| style="text-align:center;" | [[Башня Эволюция]] и общественная площадь
+| style="text-align:center;" | 2—3
+| style="text-align:center;" | [[Evolücii-čuhunduz]] da kundaline pind
 | style="text-align:right;"  | 2011
 | style="text-align:right;"  | 2014
 | style="text-align:right;"  | 1
@@ -52,31 +52,31 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- bgcolor="ffffbb"
 | style="text-align:center;" | 4
-| style="text-align:center;" | [[Комплекс «Imperia Tower»|Imperia Tower]]
+| style="text-align:center;" | [[Imperia Tower]]-kompleks
 | style="text-align:right;"  | 2006
-| style="text-align:right;"  | 201x<ref>Башня сдана в 2011 году</ref>
+| style="text-align:right;"  | 201?
 | style="text-align:right;"  | 2
 | style="text-align:right;"  | 287 723
-| style="text-align:left;"   | Проектирование второй очереди комплекса
+| style="text-align:left;"   | Toine kompleksan pala om projektiruidud
 |- bgcolor="ffffbb"
-| style="text-align:center;" | 6-8
-| style="text-align:center;" | [[Центральное ядро Москва-Сити|Центральное ядро]]
+| style="text-align:center;" | 6—8
+| style="text-align:center;" | [[Mosv-Sitin südäin]]
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 2014
 | style="text-align:right;"  | 1
 | style="text-align:right;"  | 450 000
-| style="text-align:left;"   | Отделка снаружи не завершена
+| style="text-align:left;"   | 
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 9
-| style="text-align:center;" | [[Город Столиц]]
+| style="text-align:center;" | [[Pälidnoiden Lidn]]
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 2009
 | style="text-align:right;"  | 3
 | style="text-align:right;"  | 288 680
-| style="text-align:left;"   | Первое сверхвысокое здание в [[Европа|Европе]]
+| style="text-align:left;"   | Ezmäine üläkorged sauvuz [[Evrop]]as
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 10
-| style="text-align:center;" | [[Башня на набережной]]
+| style="text-align:center;" | [[Čuhunduz randirdal]]
 | style="text-align:right;"  | 2003
 | style="text-align:right;"  | 2007
 | style="text-align:right;"  | 3
@@ -84,7 +84,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- align="right" bgcolor="ffffbb"
 | style="text-align:center;" | 11
-| style="text-align:center;" | [[IQ-quarter (Москва-Сити)|IQ-quarter]]
+| style="text-align:center;" | [[IQ-quarter (Moskv-Siti)|IQ-quarter]]
 | style="text-align:right;"  | 2012
 | style="text-align:right;"  | 2015
 | style="text-align:right;"  | 3
@@ -92,39 +92,39 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- align="right" bgcolor="ddffdd"
 | style="text-align:center;" | 12
-| style="text-align:center;" | [[Евразия (здание ММДЦ)|Башня «Евразия»]]
+| style="text-align:center;" | [[Evrazii (čuhunduz)|Evrazii]]
 | style="text-align:right;"  | 2007
 | style="text-align:right;"  | 2013
 | style="text-align:right;"  | 1
 | style="text-align:right;"  | 207 542
-| style="text-align:left;"   | Ведётся остекление последних этажей башни
+| style="text-align:left;"   | Sauvomižen lopind
 |- align="right" bgcolor="ffffbb"
 | style="text-align:center;" | 13
-| style="text-align:center;" | [[Комплекс «Федерация»]]
+| style="text-align:center;" | [[Federacii-kompleks]]
 | style="text-align:right;"  | 2003
 | style="text-align:right;"  | 2014
 | style="text-align:right;"  | 3
 | style="text-align:right;"  | 423 000
-| style="text-align:left;"   | Будет самым высоким комплексом в [[ММДЦ]] и в [[Европа|Европе]]
+| style="text-align:left;"   | Linneb kaikižikš korgedambaks kompleksaks Moskv-Sitiš i Evropas
 |- align="right" bgcolor="bbffbb"
 | style="text-align:center;" | 14
-| style="text-align:center;" | [[Меркурий Сити Тауэр]]
+| style="text-align:center;" | [[Merkurii Siti Tauer]]
 | style="text-align:right;"  | 2009
 | style="text-align:right;"  | 2013
 | style="text-align:right;"  | 1
 | style="text-align:right;"  | 158 528
-| style="text-align:left;"   | Самое высокое здание в [[Европа|Европе]]
+| style="text-align:left;"   | Kaikiš korgedamb sauvuz Evropas
 |- align="right" bgcolor="EEEEEE"
 | style="text-align:center;" | 15
-| style="text-align:center;" | Гранд Сити Москва<ref>[http://realty.lenta.ru/news/2011/09/07/torgi/ Место мэрии в «Москва-Сити» займут гостиница и апартаменты — Realty.lenta.ru]</ref>
+| style="text-align:center;" | [[Grand Siti Moskv]]
 | style="text-align:right;"  | 2013
 | style="text-align:right;"  | 2015
 | style="text-align:right;"  | 1
 | style="text-align:right;"  | 315 282
-| style="text-align:left;"   | Установлен кран на площадке
+| style="text-align:left;"   | Autogiž
 |- align="right" bgcolor="ffffbb"
 | style="text-align:center;" | 16
-| style="text-align:center;" | [[Око (Москва-Сити)|ОКО]]
+| style="text-align:center;" | [[Oko (Moskv-Siti)|Oko]]
 | style="text-align:right;"  | 2011
 | style="text-align:right;"  | 2014
 | style="text-align:right;"  | 3
@@ -132,15 +132,15 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- align="right" bgcolor="EEEEEE"
 | style="text-align:center;" | 17-18
-| style="text-align:center;" | Многофункциональный административно-деловой комплекс<ref name="1718ibc">[http://www.skyscrapercity.com/showpost.php?p=96984319&postcount=1447 SkyscraperCity — View Single Post — 17-18: 17-18 МДЦ | разработка прое&#1 …<!-- Заголовок добавлен ботом -->]</ref>
+| style="text-align:center;" | [[Äifunkcionaline administativiž-azjaline kompleks]]
 | style="text-align:right;"  | 2013
 | style="text-align:right;"  | 2015
 | style="text-align:right;"  | 2
 | style="text-align:right;"  | 362 000
-| style="text-align:left;"   | Идёт подготовка к строительству
+| style="text-align:left;"   | Mäneb vaumičend sauvomižele
 |- align="right" bgcolor="bbffbb"
 | style="text-align:center;" | 19
-| style="text-align:center;" | [[Северная башня]]
+| style="text-align:center;" | [[Pohjoine čurunduz]]
 | style="text-align:right;"  | 2005
 | style="text-align:right;"  | 2007
 | style="text-align:right;"  | 1
@@ -156,7 +156,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- align="right" bgcolor="EEEEEE"
 | style="text-align:center;" | 21
-| style="text-align:center;" | Комплекс «Юрий Долгорукий»
+| style="text-align:center;" | [[«Jurii Dolgorukii»-kompleks]]
 | style="text-align:right;"  |
 | style="text-align:right;"  |
 | style="text-align:right;"  | 2
@@ -195,7 +195,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:right;"  |
 | style="text-align:right;"  |
 |- align="right" bgcolor="EEEEEE"
-| style="text-align:center;" | 29-30
+| style="text-align:center;" | 29—30
 | style="text-align:center;" |
 | style="text-align:right;"  |
 | style="text-align:right;"  |
@@ -226,7 +226,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 ! Homaičendad
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 0
-| style="text-align:center;" | Башня 2000
+| style="text-align:center;" | Čurunduz 2000
 | style="text-align:right;"  | 1996
 | style="text-align:right;"  | 2001
 | style="text-align:right;"  | 104
@@ -236,17 +236,17 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- bgcolor="ffffbb"
 | style="text-align:center;" | 3
-| style="text-align:center;" | Эволюция
+| style="text-align:center;" | Evolücii
 | style="text-align:right;"  | 2011
 | style="text-align:right;"  | 2014
 | style="text-align:right;"  | 247
 | style="text-align:right;"  | 255
 | style="text-align:right;"  | 53
 | style="text-align:right;"  |
-| style="text-align:left;"   | Строится 51-й этаж (на 9 июня 2013)
+| style="text-align:left;"   | 51. žir om saudese
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 4
-| style="text-align:center;" | Империя Тауэр
+| style="text-align:center;" | «Imperia Tower»
 | style="text-align:right;"  | 2006
 | style="text-align:right;"  | 2011
 | style="text-align:right;"  | 230
@@ -256,14 +256,14 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:left;"   |
 |- bgcolor="EEEEEE"
 | style="text-align:center;" | 4
-| style="text-align:center;" | Империя Тауэр: Ворота Сити
+| style="text-align:center;" | «Imperia Tower»: Zavor-Siti
 | style="text-align:right;"  | 2013
-| style="text-align:right;"  | 201x
+| style="text-align:right;"  | 201?
 | style="text-align:right;"  | 50
 | style="text-align:right;"  | 50
 | style="text-align:right;"  | 14
 | style="text-align:right;"  | 
-| style="text-align:left;"   | Строительство намечено на осень<ref>{{cite web|url=http://www.m24.ru/articles/17236|title=M24.RU - В "Москве-Сити" появится новое здание с пешеходной улицей - Сетевое издание М24 - Москва 24|accessdate=2013-05-01|archiveurl=http://www.webcitation.org/6GWPFuHR0|archivedate=2013-05-11}}</ref>
+| style="text-align:left;"   | Sauvomižen augotiž linneb sügüzel
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 9
 | style="text-align:center;" | Город Столиц: Офисная пристройка
