/* Tarhoiden tablut */ >_< проверьте пока кто-нибудь статью, я ещё допишу

--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -121,7 +121,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:right;"  | 2015
 | style="text-align:right;"  | 1
 | style="text-align:right;"  | 315 282
-| style="text-align:left;"   | Autogiž
+| style="text-align:left;"   | Augotiž
 |- align="right" bgcolor="ffffbb"
 | style="text-align:center;" | 16
 | style="text-align:center;" | [[Oko (Moskv-Siti)|Oko]]
