--- a/Kuruvk.mw
+++ b/Kuruvk.mw
@@ -1,7 +1,7 @@
 [[Fail:Kurówka River 02 Poland.JPG|pisi|250px|Kuruvk tal'vel]]
 '''Kuruvk''' vai '''Kurovk''' (pol'šan kelel: ''Kurówka'') om jogi [[Pol'šanma|Pol'šanmas]], [[Visl]]an jogen oiged ližajogi. Sen piduz om 42,8 km, basseinan pind om 395,4 km². 
 
-Kuruvkan randal om 5 eländsijad: [[Garbuv]], [[Markušuv]], [[Kuruv]], [[Kon'skovolä]] da [[Pulavi]].
+Kuruvkan randal om 5 eländsijad: [[Garbuv]], [[Markušuv]], [[Kuruv]], [[Kon'skovol']] da [[Pulavi]].
 {{stub}}
 [[Kategorii:Kuruv]]
 [[Kategorii:Joged kirjamišton mödhe]]
