*Empty MediaWiki Message*

--- a/Trefl'.mw
+++ b/Trefl'.mw
@@ -1,5 +1,5 @@
 [[Fail:GuimpsLeTrèfle.JPG|thumb|right|250px|Trefl']]
-'''Trefl'''' ([[francijan kel'|franc.]]: ''Trèfle'') om pen' jogi [[Francii|Francijas]], [[Puatu—Šarant]]-regionas. Om [[Sön'je]]-jogen päližajogi, pidab [[Šarant]]-jogen basseinha. Augotab joksta [[Kordeon]]-kommunanno; mugažo jokseb [[Tuverak]]-, [[Barbez'je Sen Iler]]-, [[Le Tatr]]-, [[Ren'jak (Šarant)|Ren'jak]]-kommunoiden territorijoidme.
+'''Trefl'''' ([[francijan kel'|franc.]]: ''Trèfle'') om pen' jogi [[Francii|Francijas]], [[Puatu—Šarant]]-regionas. Om [[Sön'je]]-jogen päližajogi, pidab [[Šarant]]-jogen basseinha. Augotab joksta [[Kordeon]]-kommunanno; mugažo jokseb [[Tuverak]]-, [[Barbez'je Sen Iler]]-, [[Le Tatr]]-, [[Ren'jak (Šarant)|Ren'jak]]- i toižiden kommunoiden territorijoidme.
 
 Piduz om läz 47 kilometrad, basseinan pird — 280 km<sup>2</sup>.
 
