--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -105,7 +105,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:right;"  | 2014
 | style="text-align:right;"  | 3
 | style="text-align:right;"  | 423 000
-| style="text-align:left;"   | Linneb kaikižikš korgedambaks kompleksaks Moskv-Sitiš i Evropas
+| style="text-align:left;"   | Linneb kaikiš korktembaks kompleksaks Moskv-Sitiš i Evropas
 |- align="right" bgcolor="bbffbb"
 | style="text-align:center;" | 14
 | style="text-align:center;" | [[Merkurii Siti Tauer]]
@@ -113,7 +113,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:right;"  | 2013
 | style="text-align:right;"  | 1
 | style="text-align:right;"  | 158 528
-| style="text-align:left;"   | Kaikiš korgedamb sauvuz Evropas
+| style="text-align:left;"   | Kaikiš korktemb sauvuz Evropas
 |- align="right" bgcolor="EEEEEE"
 | style="text-align:center;" | 15
 | style="text-align:center;" | [[Grand Siti Moskv]]
