--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -243,7 +243,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:right;"  | 255
 | style="text-align:right;"  | 53
 | style="text-align:right;"  |
-| style="text-align:left;"   | 51. žir saudese
+| style="text-align:left;"   | 51. žir sauvose
 |- bgcolor="bbffbb"
 | style="text-align:center;" | 4
 | style="text-align:center;" | «Imperia Tower»
