--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -212,7 +212,7 @@ Territorii — 100 gektarad, dai 60 niišpäi — uzidele sauvusidele.
 | style="text-align:right;"  |
 |}
 
-=== Neboskröboiden tablut ===
+===  Pil'venmurendajiden tablut ===
 {| class="table sortable" style="width:100%;"
 |- style="text-align:center; white-space:nowrap;" bgcolor="BBBBBB"
 ! №
